add friends logic and endpoints
